# Cpp-projekti

./: .gitignore  CMakeLists.txt  LICENSE  README.md  item.cpp  item.h  items.cpp  items.h  main.cpp  menu.cpp  menu.h  others.cpp  others.h  poles.cpp  poles.h  skiboots.cpp  skiboots.h  skis.cpp  skis.h
